; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isp/extr_isp.c_isp_fastpost_complete.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isp/extr_isp.c_isp_fastpost_complete.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ISP_LOGWARN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"Command for fast post handle 0x%x not found\00", align 1
@SCSI_GOOD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32)* @isp_fastpost_complete to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @isp_fastpost_complete(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  br label %40

9:                                                ; preds = %2
  %10 = load i32*, i32** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32* @isp_find_xs(i32* %10, i32 %11)
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %9
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* @ISP_LOGWARN, align 4
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @isp_prt(i32* %16, i32 %17, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %40

20:                                               ; preds = %9
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @isp_destroy_handle(i32* %21, i32 %22)
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @XS_SET_RESID(i32* %24, i32 0)
  %26 = load i32, i32* @SCSI_GOOD, align 4
  %27 = load i32*, i32** %5, align 8
  %28 = call i32* @XS_STSP(i32* %27)
  store i32 %26, i32* %28, align 4
  %29 = load i32*, i32** %5, align 8
  %30 = call i64 @XS_XFRLEN(i32* %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %37

32:                                               ; preds = %20
  %33 = load i32*, i32** %3, align 8
  %34 = load i32*, i32** %5, align 8
  %35 = load i32, i32* %4, align 4
  %36 = call i32 @ISP_DMAFREE(i32* %33, i32* %34, i32 %35)
  br label %37

37:                                               ; preds = %32, %20
  %38 = load i32*, i32** %5, align 8
  %39 = call i32 @isp_done(i32* %38)
  br label %40

40:                                               ; preds = %37, %15, %8
  ret void
}

declare dso_local i32* @isp_find_xs(i32*, i32) #1

declare dso_local i32 @isp_prt(i32*, i32, i8*, i32) #1

declare dso_local i32 @isp_destroy_handle(i32*, i32) #1

declare dso_local i32 @XS_SET_RESID(i32*, i32) #1

declare dso_local i32* @XS_STSP(i32*) #1

declare dso_local i64 @XS_XFRLEN(i32*) #1

declare dso_local i32 @ISP_DMAFREE(i32*, i32*, i32) #1

declare dso_local i32 @isp_done(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
